# pyproject.toml

[project]
name = "PyVBMC"
version = "0.1.0"
description = "Variational Bayesian Monte Carlo in Python."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "cma >= 3.2.2",
    "corner >= 2.2.1",
    "dill >= 0.3.6",
    "gpyreg >= 0.1.0",
    "imageio >= 2.22.4",
    "matplotlib >= 3.6.2",
    "numpy >= 1.23.4",
    "pytest >= 7.2.0",
    "pytest-mock >= 3.10.0",
    "pytest-rerunfailures >= 10.2",
    "scipy >= 1.9.3",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = [
    "pyvbmc",
]

[project.optional-dependencies]
dev = [
    "myst_nb >= 0.17.1",
    "numpydoc >= 1.5.0",
    "pylint >= 2.15.5",
    "pytest-cov >= 4.0.0",
    "sphinx >= 4.5.0",
    "sphinx-book-theme>=0.3.3",
]
jupyter = [
    "plotly >= 5.11.0",
]

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"

[tool.pycln]
all = true
