# pyproject.toml

[project]
name = "PyVBMC"
dynamic = ["version"]  # use git tags for version, via setuptools_scm
description = "Variational Bayesian Monte Carlo in Python."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "cma >= 3.1.0",
    "corner >= 2.2.1",
    "dill >= 0.3.5.1",
    "gpyreg >= 0.1.0",
    "imageio >= 2.13.5",
    "matplotlib >= 3.5.1",
    "numpy >= 1.22.1",
    "plotly >= 5.11.0",
    "pytest >= 6.2.5",
    "pytest-mock >= 3.6.1",
    "pytest-rerunfailures >= 10.2",
    "scipy >= 1.7.3",
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true
# Include examples in binary/wheel distribution:
packages = ["pyvbmc", "pyvbmc.examples"]
package-dir = {"pyvbmc.examples" = "examples"}

[tool.setuptools.package-data]
# Make sure to include example Notebooks:
"pyvbmc.examples" = ["*.ipynb"]

[project.optional-dependencies]
dev = [
    "myst_nb >= 0.13.1",
    "numpydoc >= 1.2.1",
    "pylint >= 2.15.5",
    "pytest-cov >= 4.0.0",
    "sphinx >= 4.3.2",
    "sphinx-book-theme>=0.2.0",
    "build >= 0.9.0",
    "black >= 21.12.0",
]

[build-system]
requires = [
    "setuptools >= 45",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"

[tool.pycln]
all = true

[tool.setuptools_scm]
